Updated index.html with new changes

--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <link rel="icon" href="msr.jpg" type="image/x-icon" />
   </head>
   <body>
-    <h1>MSR</h1>
-    <p>MAHA SIVA RISHI</p>
-    <img src="msr.jpg" alt="Girl in a jacket" width="500" height="600" />
-  </body>
+    <h1>Resume</h1>
+    <h2>MAHA SIVA RISHI</h2>
+    <img src="msr.jpg" alt="Girl in a jacket" width="250" height="300" />
+    <h2>Carrer Objective</h2>
+    <h3>To leverage my technical skills and problem-solving abilities in a dynamic organization, contributing to innovation and growth. Seeking opportunities to continuously learn and advance in my professional journey</h3>
+    <h2>Education</h2>
+    <h3>Currently, Pursuing B.E Electronics and Instrumentation Engineering in Kongu Engineering College</h3>
+    <h2>Skills</h2>
+    <ol><h3>Languages</h3>
+        <li>C</li>
+        <li>C++</li>
+        <li>Python</li>
+        <li>Java</li>
+        <li>HTML</li>
+        <li>CSS</li>
+    </ol>
+    <ul><h3>Technical Skills</h3>
+        <li>Embedded Systems</li>
+        <li>Microcontrollers</li>
+        <li>Arduino</li>
+        <li>Raspberry Pi</li>
+        <li>MATLAB</li>
+    </ul>
+
+</body>
 </html>
