Updated index.html with projects

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
         <li>MATLAB</li>
         <li>IOT</li>
     </ul>
+  <h2>Projects</h2>
+    <h3>E-Learning Platform</h3>
+    <p>Developed a full-stack educational website with login, course search, and video integration using React and Node.js.</p>
+    <h3>IoT Air Purifier</h3>
+    <p>Built a pollution indicator and air purifier system using Arduino and gas sensors.</p>
+    <h3>Smart Home Automation</h3>
+    <p>Created a home automation system with IoT devices for remote control of appliances.</p>
 
 </body>
 </html>
