Updated index.html with certifications and contact

--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
     <p>Built a pollution indicator and air purifier system using Arduino and gas sensors.</p>
     <h3>Smart Home Automation</h3>
     <p>Created a home automation system with IoT devices for remote control of appliances.</p>
-
+<h2>Certifications</h2>
+  <ul>
+    <li>Certified in Python for Data Science – Coursera</li>
+    <li>Web Development Bootcamp – Udemy</li>
+    <li>IoT Fundamentals – edX</li>
+    <li>Embedded Systems Design – Coursera</li>
+  </ul>
+<h2>Contact</h2>
+    <p>Email: rishikeshwaranmsr3106@gmail.com</p>
+    <p>Phone: +91 9715708810</p>
 </body>
 </html>
