--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
   <head>
     <title>MSR</title>
     <link rel="icon" href="msr.jpg" type="image/x-icon" />
+    <link rel = "stylesheet" href ="index.css">
   </head>
   <body>
     <h1>Resume</h1>
-    <h2>MAHA SIVA RISHI</h2>
-    <img src="msr.jpg" alt="Girl in a jacket" width="250" height="300" />
+    <h2 class = "name">Rishikeshwaran M</h2>
+    <img src="msr.jpg" width="250" height="300" class="center-img" />
     <h2>Carrer Objective</h2>
     <h3>To leverage my technical skills and problem-solving abilities in a dynamic organization, contributing to innovation and growth. Seeking opportunities to continuously learn and advance in my professional journey</h3>
     <h2>Education</h2>
     <h3>Currently, Pursuing B.E Electronics and Instrumentation Engineering in Kongu Engineering College</h3>
     <h2>Skills</h2>
-    <ol><h3>Languages</h3>
+    <ol type = "1"><h3>Languages</h3>
         <li>C</li>
         <li>C++</li>
         <li>Python</li>
@@ -37,12 +38,24 @@
     <h3>Smart Home Automation</h3>
     <p>Created a home automation system with IoT devices for remote control of appliances.</p>
 <h2>Certifications</h2>
-  <ul>
-    <li>Certified in Python for Data Science – Coursera</li>
-    <li>Web Development Bootcamp – Udemy</li>
-    <li>IoT Fundamentals – edX</li>
-    <li>Embedded Systems Design – Coursera</li>
-  </ul>
+<table>
+  <tr>
+    <th>Course Name</th>
+    <th>Issued By</th>
+  </tr>
+  <tr>
+    <td>Certified in Python for Data Science</td>
+    <td>Coursera</td>
+  </tr>
+  <tr>
+  <td>Web Development Bootcamp</td>
+  <td>Udemy</td>
+  </tr>
+  <tr>
+    <td>IoT Fundamentals</td>
+    <td>edX</td>
+  </tr>
+</table>
 <h2>Contact</h2>
     <p>Email: rishikeshwaranmsr3106@gmail.com</p>
     <p>Phone: +91 9715708810</p>
